syntax = "proto3";
package desmos.posts.v1.client;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

import "desmos/posts/v1/models.proto";

option go_package = "github.com/desmos-labs/desmos/v4/x/posts/client/utils";

// CreatePostJSON contains the data that can be specified when creating a Post
// using the CLi command
message CreatePostJSON {
  // (optional) External id for this post
  string external_id = 1 [ (gogoproto.customname) = "ExternalID" ];

  // (optional) Text of the post
  string text = 2;

  // (optional) Entities connected to this post
  Entities entities = 3;

  // Attachments of the post
  repeated google.protobuf.Any attachments = 4;

  // (optional) Id of the original post of the conversation
  uint64 conversation_id = 5 [ (gogoproto.customname) = "ConversationID" ];

  // Reply settings of this post
  ReplySetting reply_settings = 6;

  // A list this posts references (either as a reply, repost or quote)
  repeated PostReference referenced_posts = 7 [ (gogoproto.nullable) = false ];
}

// EditPostJSON contains the data that can be specified when editing a Post
// using the CLI command
message EditPostJSON {
  // New text of the post
  string text = 1;

  // New entities connected to this post
  Entities entities = 2;
}